update authentication user